sample-app/config/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
  labels:
    app: sample-app
    enableBackup: "true"
