sample-app/config/03-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: sample-app
  namespace: sample-app
  labels:
    app: sample-app
    enableBackup: "true"
spec:
  containers:
    - image: hemakshis/sample-app:1.0.0
      name: sample-app
